# CPE-Capstone-2024-2025

./: .gitignore  .gitmodules  GUI_INSTALL.md  LORA_INSTALL.md  README.md  flight_state_pub.cpp
flight_control/: CMakeLists.txt  coordinatedisplay.qml  flight_control.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml  resources.qrc
gps-nodes/: CMakeLists.txt  package.xml
gps-nodes/include/: GPSWidget.h  MainWidget.h  ROSThread.h  TabWidget.h  VideoStreamWidget.h  main.h  publisher.h  subscriber.h  videoSubscriber.h
gps-nodes/src/: GPSWidget.cpp  MainWidget.cpp  ROSThread.cpp  TabWidget.cpp  VideoStreamWidget.cpp  main.cpp  publisher.cpp  subscriber.cpp  videoSubscriber.cpp
gps_nodes/: CMakeLists.txt  package.xml
gps_nodes/src/: publisher.cpp  subscriber.cpp
gui/: CMakeLists.txt  CMakeLists.txt~Updated upstream  mainwindow.ui  package.xml  resources.qrc
gui/gui_messages/: package.xml
gui/include/: ROSThread.h  connectionstatussubscriber.hpp  connectionstatuswidget.hpp  datalogger.hpp  flightcommandpublisher.hpp  flightstatepublisher.hpp  flightstates.hpp  flightstatesubscriber.hpp  gpssubscriber.hpp  gpswidget.hpp  imuwidget.hpp  mainwindow.hpp  ui_mainwindow.h  videosubscriber.hpp  videowidget.hpp  waypointmanager.hpp
gui/resources/: map.qml
gui/src/: ROSThread.cpp  connectionstatussubscriber.cpp  connectionstatuswidget.cpp  datalogger.cpp  flightstatepublisher.cpp  flightstatesubscriber.cpp  gpssubscriber.cpp  gpswidget.cpp  gpswidget.cpp~Updated upstream  imusubscriber.cpp  imuwidget.cpp  imuwidget.cpp~Updated upstream  main.cpp  mainwindow.cpp  videosubscriber.cpp  videowidget.cpp  waypointmanager.cpp
gui_messages/: CMakeLists.txt
heartbeat/: CMakeLists.txt  package.xml
heartbeat/src/: drone.cpp  groundstation.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_msgs/share/custom_msgs/: local_setup.sh  package.sh
install/example_global_navigation_cpp/lib/example_global_navigation_cpp/: example_global_navigation
install/example_global_navigation_cpp/share/example_global_navigation_cpp/: local_setup.sh  package.sh
install/example_local_navigation_cpp/lib/example_local_navigation_cpp/: example_local_navigation
install/example_local_navigation_cpp/share/example_local_navigation_cpp/: local_setup.sh  package.sh
install/example_mode_fw_attitude_cpp/lib/example_mode_fw_attitude_cpp/: example_mode_fw_attitude
install/example_mode_fw_attitude_cpp/share/example_mode_fw_attitude_cpp/: package.sh
install/example_mode_goto_cpp/lib/example_mode_goto_cpp/: example_mode_goto
install/example_mode_goto_cpp/share/example_mode_goto_cpp/: local_setup.sh  package.sh
install/example_mode_goto_global_cpp/lib/example_mode_goto_global_cpp/: example_mode_goto_global
install/example_mode_goto_global_cpp/share/example_mode_goto_global_cpp/: local_setup.sh  package.sh
install/example_mode_manual_cpp/lib/example_mode_manual_cpp/: example_mode_manual
install/example_mode_manual_cpp/share/example_mode_manual_cpp/: local_setup.sh  package.sh
install/example_mode_rtl_replacement_cpp/lib/example_mode_rtl_replacement_cpp/: example_mode_rtl
install/example_mode_rtl_replacement_cpp/share/example_mode_rtl_replacement_cpp/: local_setup.sh  package.sh
install/example_mode_with_executor_cpp/lib/example_mode_with_executor_cpp/: example_mode_with_executor
install/example_mode_with_executor_cpp/share/example_mode_with_executor_cpp/: package.sh
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_ros2_cpp/share/px4_ros2_cpp/: package.sh
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  flight_state_pub  gui_command_pub  offboard_control  offboard_control_srv  offboard_launch  offboard_paths  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: package.sh  package.xml
log/: latest_build  latest_list
lora/: CMakeLists.txt  out2.txt  package.xml
lora/include/: .subscriber.hpp.swp  lorapublisher.hpp  lorasubscriber.hpp  serialstructs.hpp  subscriber.hpp
lora/install/: local_setup.sh  setup.sh
lora/install/lora/lib/lora/: publisher
lora/install/lora/share/lora/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
lora/install/lora/share/lora/cmake/: loraConfig.cmake
lora/log/: latest_build
lora/src/: lorapublisher.cpp  lorasubscriber.cpp  subscriber.cpp
qt-gui/: CMakeLists.txt  flight_control.ui  map.qml  resources.qrc
qt-gui/include/: imusubscriber.hpp  imuwidget.hpp  mainwindow.hpp  ui_mainwindow.h
qt-gui/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
qt-gui/install/flight_control/share/flight_control/: package.bash  package.zsh
qt-gui/log/: latest_build
qt-gui/resources/: map.qml
qt-gui/src/: imusubscriber.cpp  imuwidget.cpp  main.cpp  mainwindow.cpp  videosubscriber.cpp
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/log/: latest_build
src/custom_msgs/msg/: FlightCommand.msg
src/px4_ros_com/: CMakeLists.txt
src/px4_ros_com/src/examples/offboard/: .offboard_paths.cpp.swp  gui_command_pub.cpp  offboard_control.cpp  offboard_launch.cpp
test-node/imu-publisher/: CMakeLists.txt  package.xml
test-node/imu-publisher/src/: imu-publisher.cpp
video-nodes/: CMakeLists.txt  package.xml
video-nodes/src/: video-publisher.cpp  video-subscriber.cpp
ws_sensor_combined/install/: setup.sh
ws_sensor_combined/install/custom_msgs/share/custom_msgs/: package.sh
ws_sensor_combined/install/px4_msgs/share/px4_msgs/: package.sh
ws_sensor_combined/install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_paths
ws_sensor_combined/install/px4_ros_com/share/px4_ros_com/: package.sh
ws_sensor_combined/log/: latest_build
ws_sensor_combined/src/custom_msgs/install/: local_setup.sh  setup.sh
ws_sensor_combined/src/gui_messages/: CMakeLists.txt  package.xml
ws_sensor_combined/src/px4_ros_com/: CMakeLists.txt  package.xml
ws_sensor_combined/src/px4_ros_com/launch/: offboard_control_launch.yaml  vehicle_gps_position_listener.launch.py
(+37 files in other folders)
